# Castify

./: .editorconfig  .gitattributes  .gitignore  .npmrc  license.txt  readme.md
.github/: CODEOWNERS  contributing.md
castify/: .rustfmt.toml  Cargo.toml  build.rs
castify/src/: lib.rs
castify/src/core_logger/: core_logger.rs
castify/src/crypto/: encrypt.rs
castify/src/data/: data.rs  mod.rs  node.rs
castify/src/plugins/: mod.rs
castify/src/plugins/capture/: device.rs  mod.rs
castify/src/plugins/threading/: file.rs
castify/src/router/: scene.rs
castify/src/util/: stream.rs
core/: .env  Cargo.toml
core/prisma/: schema.prisma
core/prisma-cli/: Cargo.toml
core/src/: main.rs  router.rs
desktop/: .eslintrc.json  .gitignore  .prettierignore  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  vitest.config.ts
desktop/src/: App.tsx  client.ts  core.scss  main.tsx
desktop/src-tauri/: .gitignore  Cargo.toml  config.yml  local_config.yml  tauri.conf.json
desktop/src-tauri/icons/: castify-icon.icns  logo.icns  speak-icon.icns
desktop/src-tauri/projects/testscene/: testscene.yml
desktop/src-tauri/src/: data.rs  main.rs
desktop/src/components/ContentDrawer/: ContentDrawer.tsx  File.tsx  file.scss
desktop/src/components/General/: ContextMenu.tsx  Hover.tsx
desktop/src/components/Nav/: SideNav.tsx
desktop/src/components/Project/: CreateProjectBtn.tsx  NewProjectBtn.tsx  NewProjectForm.tsx  OpenProjectBtn.tsx
desktop/src/components/Scene/: AddNodeButton.tsx  AddNodeScreen.tsx  CreateNode.tsx  PreviewScene.tsx  Scene.tsx  SceneCore.tsx  (+2 more)
desktop/src/hooks/: useScene.ts
desktop/src/i18n/: fallback.ts
desktop/src/pages/: 404.tsx
desktop/src/theme/: theme.ts
desktop/src/ts/: bindings.ts  storage.ts
desktop/src/types/: data.ts
landing/: .prettierrc  package.json  pnpm-lock.yaml
landing/src/: app.html  error.html
landing/src/css/: core.css
landing/src/routes/: +layout.svelte  +page.svelte
scripts/: setup.bat  setup.py  setup.sh
speak/: .gitignore  Cargo.toml  Readme.md  bindings.ts  build.rs  template.yml
speak/prisma-cli/src/: main.rs
speak/src/: lib.rs  prisma.rs
speak/src/crypto/: encrypt.rs
speak/src/data/: data.rs  mod.rs  node.rs  project.rs  project_template.rs  scene.rs  scene_node.rs  thumbnail.rs
speak/src/data/template/: node_template.rs
speak/src/logger/: logger.rs
speak/src/plugins/threading/: file.rs  job.rs  mod.rs
speak/src/router/: mod.rs  router.rs  scene.rs
(+21 files in other folders)
