[package]
name = "speak"
version = "0.1.0"
description="Streaming made simple"
authors = ["Mumble Inc"]
license="APACHE-2.0"
repository="https://github.com/Mumble-Tech/Speak"
edition = "2021"

[workspace]
members = [
	"prisma-cli"
]

[features]
default = []
mobile = [
] # mobile features
ffmpeg = [
	"dep:ffmpeg-next"
]

[dependencies]
rspc = { version="0.1.3", features=["uuid", "chrono", "tracing"] }
tokio = { version = "1.27.0", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.7" }
yaml-rust = "0.4.5"
serde = { version="1.0.159", features=["derive"] }
chrono = { version="0.4.24", features=["serde"]}
serde_json = "1.0"
serde_yaml = "0.9.19"
uuid = { version="1.1.2", features=["serde", "v4"] }
ffmpeg-next = { version="6.0.0", optional=true, features=[] }
