[package]
name = "desktop"
version = "1.0.0"
description = "New take on desktop recording and streaming"
authors = ["Mumble"]
license = "APACHE-2.0"
repository = "https://github.com/Mumble-Tech/Speak"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "macos-private-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
speak = { path="../../castify", features = ["ffmpeg"] }
serde_json = "1.0"
serde_yaml = "0.9.19"
bincode = "1.3.3"
rspc = { version = "0.1.3", features = ["tauri"] }
tokio = { version = "1.27.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
